force-app/main/default/objects/Related_Source__c/fields/Ad_set_Name__c.field-meta.xml
<CustomField>
    <fullName>Ad_set_Name__c</fullName>
    <label>Ad set Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>