force-app/main/default/objects/Related_Source__c/fields/Age_of_Younger_Child__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Younger_Child__c</fullName>
    <label>Age of Younger Child</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>