force-app/main/default/objects/Related_Source__c/fields/Allocated_Reason__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Reason__c</fullName>
    <label>Allocated Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Place Visit</fullName>
            </value>
            <value>
                <fullName>Direct allocation</fullName>
            </value>
            <value>
                <fullName>General Enquiry</fullName>
            </value>
            <value>
                <fullName>Interested In Other project</fullName>
            </value>
            <value>
                <fullName>Interested send info</fullName>
            </value>
            <value>
                <fullName>Interested callback</fullName>
            </value>
            <value>
                <fullName>Interested but other location</fullName>
            </value>
            <value>
                <fullName>Interested in VC</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>