force-app/main/default/objects/Related_Source__c/fields/Allocator__c.field-meta.xml
<CustomField>
    <fullName>Allocator__c</fullName>
    <label>Allocator</label>
    <type>TextArea</type>
</CustomField>