force-app/main/default/objects/Related_Source__c/fields/Any_relatives_friends_Abroad__c.field-meta.xml
<CustomField>
    <fullName>Any_relatives_friends_Abroad__c</fullName>
    <label>Any relatives /friends Abroad</label>
    <length>100</length>
    <type>Text</type>
</CustomField>