force-app/main/default/objects/Related_Source__c/fields/Are_you_a_Native_of_the_City__c.field-meta.xml
<CustomField>
    <fullName>Are_you_a_Native_of_the_City__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are you a Native of the City?*</label>
    <type>Checkbox</type>
</CustomField>