force-app/main/default/objects/Related_Source__c/fields/Calling_Region__c.field-meta.xml
<CustomField>
    <fullName>Calling_Region__c</fullName>
    <label>Calling Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>