force-app/main/default/objects/Related_Source__c/fields/Channel_Partner1__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Partner</label>
    <referenceTo>Channel_Partner__c</referenceTo>
    <relationshipLabel>Related Sources (Channel Partner)</relationshipLabel>
    <relationshipName>Related_Sources1</relationshipName>
    <type>Lookup</type>
</CustomField>