force-app/main/default/objects/Related_Source__c/fields/Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Sources</relationshipLabel>
    <relationshipName>Related_Sources</relationshipName>
    <type>Lookup</type>
</CustomField>