force-app/main/default/objects/Related_Source__c/fields/Channel_Partner_Email__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Email__c</fullName>
    <formula>Channel_Partner1__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Partner Email</label>
    <type>Text</type>
</CustomField>