force-app/main/default/objects/Related_Source__c/fields/Cilent_Place__c.field-meta.xml
<CustomField>
    <fullName>Cilent_Place__c</fullName>
    <label>Cilent Place</label>
    <length>100</length>
    <type>Text</type>
</CustomField>