force-app/main/default/objects/Related_Source__c/fields/Client_Place__c.field-meta.xml
<CustomField>
    <fullName>Client_Place__c</fullName>
    <label>Client Place</label>
    <length>255</length>
    <type>Text</type>
</CustomField>