force-app/main/default/objects/Related_Source__c/fields/Client_Status__c.field-meta.xml
<CustomField>
    <fullName>Client_Status__c</fullName>
    <label>Client Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>