force-app/main/default/objects/Related_Source__c/fields/Club_Memberships__c.field-meta.xml
<CustomField>
    <fullName>Club_Memberships__c</fullName>
    <label>Club Memberships</label>
    <length>200</length>
    <type>Text</type>
</CustomField>