force-app/main/default/objects/Related_Source__c/fields/Consent__c.field-meta.xml
<CustomField>
    <fullName>Consent__c</fullName>
    <label>Consent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>