force-app/main/default/objects/Related_Source__c/fields/Consent_Time__c.field-meta.xml
<CustomField>
    <fullName>Consent_Time__c</fullName>
    <label>Consent Time</label>
    <type>DateTime</type>
</CustomField>