force-app/main/default/objects/Related_Source__c/fields/Country1__c.field-meta.xml
<CustomField>
    <fullName>Country1__c</fullName>
    <label>Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>