force-app/main/default/objects/Related_Source__c/fields/CP_Id__c.field-meta.xml
<CustomField>
    <fullName>CP_Id__c</fullName>
    <label>CP Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>