force-app/main/default/objects/Related_Source__c/fields/CP_Lookup__c.field-meta.xml
<CustomField>
    <fullName>CP_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CP Lookup</label>
    <referenceTo>Channel_Partner__c</referenceTo>
    <relationshipLabel>Related Sources</relationshipLabel>
    <relationshipName>Related_Sources</relationshipName>
    <type>Lookup</type>
</CustomField>