force-app/main/default/objects/Related_Source__c/fields/CP_Manager_s_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>CP_Manager_s_Email_Id__c</fullName>
    <formula>Channel_Partner1__r.Source_Manager__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CP Manager&apos;s Email Id</label>
    <type>Text</type>
</CustomField>