force-app/main/default/objects/Related_Source__c/fields/CP_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>CP_Owner_ID__c</fullName>
    <formula>Channel_Partner__r.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CP Owner ID</label>
    <type>Text</type>
</CustomField>