force-app/main/default/objects/Related_Source__c/fields/CP_RM_PAN__c.field-meta.xml
<CustomField>
    <fullName>CP_RM_PAN__c</fullName>
    <formula>Channel_Partner1__r.PAN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CP RM PAN</label>
    <type>Text</type>
</CustomField>