force-app/main/default/objects/Related_Source__c/fields/Created_Date_C__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_C__c</fullName>
    <formula>if(TEXT(Lead_Type__c)==&apos;Fresh&apos;,CreatedDate,If(TEXT(Lead_Type__c)==&apos;Re-Engaged&apos;, Re_Engaged_Date__c ,IF(TEXT(Lead_Type__c)==&apos;Re-Opened&apos;,Last_Re_Opened_Date__c,null )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date(C)</label>
    <type>DateTime</type>
</CustomField>