force-app/main/default/objects/Related_Source__c/fields/Current_Accommodation__c.field-meta.xml
<CustomField>
    <fullName>Current_Accommodation__c</fullName>
    <label>Current Accommodation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owned</fullName>
            </value>
            <value>
                <fullName>Rented</fullName>
            </value>
            <value>
                <fullName>Company Provided</fullName>
            </value>
            <value>
                <fullName>Living with Parents</fullName>
            </value>
            <value>
                <fullName>Living with Children</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>