force-app/main/default/objects/Related_Source__c/fields/Current_Company_Address__c.field-meta.xml
<CustomField>
    <fullName>Current_Company_Address__c</fullName>
    <label>Current Company Address</label>
    <type>TextArea</type>
</CustomField>