force-app/main/default/objects/Related_Source__c/fields/Current_Residence__c.field-meta.xml
<CustomField>
    <fullName>Current_Residence__c</fullName>
    <label>Current Residence</label>
    <length>100</length>
    <type>Text</type>
</CustomField>