force-app/main/default/objects/Related_Source__c/fields/Current_Residence_Typology__c.field-meta.xml
<CustomField>
    <fullName>Current_Residence_Typology__c</fullName>
    <label>Current Residence Typology</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1BHK</fullName>
            </value>
            <value>
                <fullName>2BHK</fullName>
            </value>
            <value>
                <fullName>3BHK</fullName>
            </value>
            <value>
                <fullName>4BHK</fullName>
            </value>
            <value>
                <fullName>5BHK</fullName>
            </value>
            <value>
                <fullName>6BHK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>