force-app/main/default/objects/Related_Source__c/fields/Customer_Place_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Place_Visit_Date__c</fullName>
    <label>Customer Place Visit Date</label>
    <type>Date</type>
</CustomField>