force-app/main/default/objects/Related_Source__c/fields/Customer_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Project_Name__c</fullName>
    <label>Customer Project Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Project_Name</valueSetName>
    </valueSet>
</CustomField>