force-app/main/default/objects/Related_Source__c/fields/Customer_s_Unit_No__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Unit_No__c</fullName>
    <label>Customer&apos;s Unit No.</label>
    <length>80</length>
    <type>Text</type>
</CustomField>