force-app/main/default/objects/Related_Source__c/fields/Date_of_Attendence__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Attendence__c</fullName>
    <label>Date of Attendance</label>
    <type>Date</type>
</CustomField>