force-app/main/default/objects/Related_Source__c/fields/Date_of_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Enquiry__c</fullName>
    <label>Date of Enquiry</label>
    <type>DateTime</type>
</CustomField>