force-app/main/default/objects/Related_Source__c/fields/Do_You_have_Kids__c.field-meta.xml
<CustomField>
    <fullName>Do_You_have_Kids__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do You have Kids</label>
    <type>Checkbox</type>
</CustomField>