force-app/main/default/objects/Related_Source__c/fields/EmailProject__c.field-meta.xml
<CustomField>
    <fullName>EmailProject__c</fullName>
    <formula>IF(NOT(ISBLANK(Email__c)),Email__c+TEXT(SLead__r.Allocated_Project__c),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EmailProject</label>
    <type>Text</type>
</CustomField>