force-app/main/default/objects/Related_Source__c/fields/EOI_Collected__c.field-meta.xml
<CustomField>
    <fullName>EOI_Collected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EOI Collected</label>
    <type>Checkbox</type>
</CustomField>