force-app/main/default/objects/Related_Source__c/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <label>Event Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>