force-app/main/default/objects/Related_Source__c/fields/Execuive_Count__c.field-meta.xml
<CustomField>
    <fullName>Execuive_Count__c</fullName>
    <label>Execuive Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>