force-app/main/default/objects/Related_Source__c/fields/First_Presales_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Presales_Call_Date__c</fullName>
    <label>First Presales Call Date</label>
    <type>DateTime</type>
</CustomField>