force-app/main/default/objects/Related_Source__c/fields/First_Sales_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Sales_Call_Date__c</fullName>
    <label>First Sales Call Date</label>
    <type>DateTime</type>
</CustomField>