force-app/main/default/objects/Related_Source__c/fields/First_Site_Visit_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Site_Visit_Date_Time__c</fullName>
    <label>First Site Visit Date/Time</label>
    <type>DateTime</type>
</CustomField>