force-app/main/default/objects/Related_Source__c/fields/First_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>First_Sub_Source__c</fullName>
    <label>First Sub Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>