force-app/main/default/objects/Related_Source__c/fields/Follow_Up_Comment__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Comment__c</fullName>
    <label>Follow Up Comment</label>
    <type>TextArea</type>
</CustomField>