force-app/main/default/objects/Related_Source__c/fields/Follow_Up_Description__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Description__c</fullName>
    <label>Follow Up Description</label>
    <type>TextArea</type>
</CustomField>