force-app/main/default/objects/Related_Source__c/fields/Have_you_visited_any_Zuari_Project_recen__c.field-meta.xml
<CustomField>
    <fullName>Have_you_visited_any_Zuari_Project_recen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have you visited any Zuari Project recen</label>
    <type>Checkbox</type>
</CustomField>