force-app/main/default/objects/Related_Source__c/fields/Hoarding_Details__c.field-meta.xml
<CustomField>
    <fullName>Hoarding_Details__c</fullName>
    <label>Hoarding Details</label>
    <type>TextArea</type>
</CustomField>