force-app/main/default/objects/Related_Source__c/fields/How_are_you_financing_your_dream_home__c.field-meta.xml
<CustomField>
    <fullName>How_are_you_financing_your_dream_home__c</fullName>
    <label>How are you financing your dream home</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Own Funds</fullName>
            </value>
            <value>
                <fullName>Home Loans</fullName>
            </value>
            <value>
                <fullName>Sale of existing property</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>