force-app/main/default/objects/Related_Source__c/fields/How_did_you_get_to_know_about_our_Projec__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_get_to_know_about_our_Projec__c</fullName>
    <label>How did you get to know about our Projec</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital-Google</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Digital Website</fullName>
            </value>
            <value>
                <fullName>Digital-Property Portals</fullName>
            </value>
            <value>
                <fullName>SMS/Whatsapp</fullName>
            </value>
            <value>
                <fullName>Emailer</fullName>
            </value>
            <value>
                <fullName>Channel Partner Name</fullName>
            </value>
            <value>
                <fullName>Existing customer</fullName>
            </value>
            <value>
                <fullName>Zuari Champion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>