force-app/main/default/objects/Related_Source__c/fields/How_long_have_you_been_looking_for_a_hom__c.field-meta.xml
<CustomField>
    <fullName>How_long_have_you_been_looking_for_a_hom__c</fullName>
    <label>How long have you been looking for a hom</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 2 weeks</fullName>
            </value>
            <value>
                <fullName>1 months</fullName>
            </value>
            <value>
                <fullName>2 months</fullName>
            </value>
            <value>
                <fullName>&gt; 2 months</fullName>
            </value>
            <value>
                <fullName>6 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>