force-app/main/default/objects/Related_Source__c/fields/How_long_you_are_in_the_city_in_years__c.field-meta.xml
<CustomField>
    <fullName>How_long_you_are_in_the_city_in_years__c</fullName>
    <label>How long you are in the city(in years)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>