force-app/main/default/objects/Related_Source__c/fields/How_soon_do_you_intend_to_buy_it__c.field-meta.xml
<CustomField>
    <fullName>How_soon_do_you_intend_to_buy_it__c</fullName>
    <label>How soon do you intend to buy it</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 2 weeks</fullName>
            </value>
            <value>
                <fullName>1 month</fullName>
            </value>
            <value>
                <fullName>2 months</fullName>
            </value>
            <value>
                <fullName>&gt; 2 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>