force-app/main/default/objects/Related_Source__c/fields/IndividualId__c.field-meta.xml
<CustomField>
    <fullName>IndividualId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual</label>
    <referenceTo>Individual</referenceTo>
    <relationshipLabel>Related Sources</relationshipLabel>
    <relationshipName>Related_Sources</relationshipName>
    <type>Lookup</type>
</CustomField>