force-app/main/default/objects/Related_Source__c/fields/Interest_In_Other_Project__c.field-meta.xml
<CustomField>
    <fullName>Interest_In_Other_Project__c</fullName>
    <label>Interest In Other Project</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Project_Name</valueSetName>
    </valueSet>
</CustomField>