force-app/main/default/objects/Related_Source__c/fields/Interested_In_Event__c.field-meta.xml
<CustomField>
    <fullName>Interested_In_Event__c</fullName>
    <label>Interested In Event</label>
    <length>100</length>
    <type>Text</type>
</CustomField>