force-app/main/default/objects/Related_Source__c/fields/Interested_in_event_Reconfirmation__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_event_Reconfirmation__c</fullName>
    <label>Interested in event- Reconfirmation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>May be</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>