force-app/main/default/objects/Related_Source__c/fields/Investment_Range__c.field-meta.xml
<CustomField>
    <fullName>Investment_Range__c</fullName>
    <label>Investment Range</label>
    <length>200</length>
    <type>Text</type>
</CustomField>