force-app/main/default/objects/Related_Source__c/fields/Is_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_User__c</fullName>
    <formula>OwnerId == $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Current User</label>
    <type>Checkbox</type>
</CustomField>