force-app/main/default/objects/Related_Source__c/fields/Is_Owner__c.field-meta.xml
<CustomField>
    <fullName>Is_Owner__c</fullName>
    <formula>Owner:User.Id == SLead__r.Owner:User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Owner</label>
    <type>Checkbox</type>
</CustomField>