force-app/main/default/objects/Related_Source__c/fields/Is_Site_Visit_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Is_Site_Visit_Mandatory__c</fullName>
    <formula>Owner:User.Site_Visit_Mandatory__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Site Visit Mandatory</label>
    <type>Checkbox</type>
</CustomField>