force-app/main/default/objects/Related_Source__c/fields/Is_this_your_First_Home__c.field-meta.xml
<CustomField>
    <fullName>Is_this_your_First_Home__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is this your First Home</label>
    <type>Checkbox</type>
</CustomField>