force-app/main/default/objects/Related_Source__c/fields/Is_your_spouse_working__c.field-meta.xml
<CustomField>
    <fullName>Is_your_spouse_working__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is your spouse working</label>
    <type>Checkbox</type>
</CustomField>