force-app/main/default/objects/Related_Source__c/fields/Jigsaw__c.field-meta.xml
<CustomField>
    <fullName>Jigsaw__c</fullName>
    <label>Data.com Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>