force-app/main/default/objects/Related_Source__c/fields/Kids__c.field-meta.xml
<CustomField>
    <fullName>Kids__c</fullName>
    <label>Kids</label>
    <length>100</length>
    <type>Text</type>
</CustomField>